<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.10">
  <POU Name="RunCableHolder" Id="{f529174f-1b1c-4098-af22-9f3935583d60}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK RunCableHolder EXTENDS RunUnitSlave
VAR
	//devices
	holderFixedEnd : POINTER TO RunCylinder;
	holderMovingEnd : POINTER TO RunCylinder;
	shifterShort : POINTER TO RunCylinder;
	shifterLong : POINTER TO RunCylinder;
	//axis (share
	axis : POINTER TO RunAxis;
	ptDrag : POINTER TO ParameterSet;
	ptRelease : pointer to ParameterSet;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[SUPER^();

CASE outputState OF
	//---------------Initialize
	eSpecialStates.INITIAL_BEGIN:
		transitionByte.0 :=  holderFixedEnd^.Execute(eCylinderCommands.COMMAND_A);
		transitionByte.1 :=  holderMovingEnd^.Execute(eCylinderCommands.COMMAND_A);
		transitionByte.2 :=  shifterShort^.Execute(eCylinderCommands.COMMAND_A);
		transitionByte.3 :=  shifterLong^.Execute(eCylinderCommands.COMMAND_A);
		IF transitionByte = 16#F THEN
			NextState := eSpecialStates.INITIAL_END;
		END_IF
	//---------------Working
	eSpecialStates.SLAVE_ENTER_PROCEDURE:
		bSerialTransition := shifterLong^.Execute(eCylinderCommands.COMMAND_B);
	16#201:
		//hold
		transitionByte.0 :=  holderFixedEnd^.Execute(eCylinderCommands.COMMAND_B);
		transitionByte.1 :=  holderMovingEnd^.Execute(eCylinderCommands.COMMAND_B);
		bSerialTransition := (transitionByte = 16#3);
	16#202:
		bSerialTransition := axis^.ExecuteParameter(ptDrag);//inform transporter moving work2
	16#203:
		//strech
		IF shifterShort^.Execute(eCylinderCommands.COMMAND_B) THEN
			slaveWorkingSignal[1] := TRUE; //inform to labeler handler to work
			NextState := 16#210;
		END_IF
	//-------------Releasing
	16#210:
		//wait until
		bSerialTransition := NOT slaveWorkingSignal[1];
	16#211:
		transitionByte.0 := holderFixedEnd^.Execute(eCylinderCommands.COMMAND_A); //release
		transitionByte.1 := holderMovingEnd^.Execute(eCylinderCommands.COMMAND_A);
		IF transitionByte = 16#3 THEN
			bSerialTransition := TRUE;
		END_IF
	16#212:
		bSerialTransition := axis^.ExecuteParameter(ptRelease);//inform transporter moving release
	16#213:
		//release
		bSerialTransition := shifterLong^.Execute(eCylinderCommands.COMMAND_A);
	16#214:
		//release
		bSerialTransition := holderMovingEnd^.Execute(eCylinderCommands.COMMAND_A);
	16#215:
		IF shifterShort^.Execute(eCylinderCommands.COMMAND_A) THEN
			NextState := eSpecialStates.SLAVE_WORK_DONE; //rewind
		END_IF
END_CASE]]></ST>
    </Implementation>
    <Method Name="FB_init" Id="{5c2d8834-883b-4bdd-9d6d-567f106a2a04}">
      <Declaration><![CDATA[METHOD FB_init : BOOL
VAR_INPUT
	bInitRetains : BOOL; // if TRUE, the retain variables are initialized (warm start / cold start)
	bInCopyCode : BOOL;  // if TRUE, the instance afterwards gets moved into the copy code (online change)
	
	argParent : POINTER TO RunUnitGeneric;
	argSlotBase : POINTER TO RunMaterial;
	argSlotLast : POINTER TO RunMaterial;
	
	argWorkingSignal : POINTER TO BOOL;
	
	//devices
	argHolderFixedEnd : POINTER TO RunCylinder;
	argHolderMovingEnd : POINTER TO RunCylinder;
	argShifterShort : POINTER TO RunCylinder;
	argShifterLong : POINTER TO RunCylinder;
	
	//
	argAxis : POINTER TO RunAxis;
END_VAR
VAR CONSTANT
	indexDrag : INT :=8;
	indexRelease : int :=9;
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[//initialize 
Parent := argParent;
SlotBase := argSlotBase;
SlotLast := argSlotLast;
//
IF bInitRetains THEN
	NextState := eSpecialStates.INITIAL_BEGIN;
END_IF

workingSignal := argWorkingSignal; //link

//device link
holderFixedEnd := argHolderFixedEnd;
holderMovingEnd := argHolderMovingEnd;
shifterShort := argShifterShort;
shifterLong := argShifterLong;

//
axis := argAxis;
ptDrag := ADR(axis^.ptpCommands[indexDrag]);
ptRelease := ADR(axis^.ptpCommands[indexRelease]);]]></ST>
      </Implementation>
    </Method>
    <LineIds Name="RunCableHolder">
      <LineId Id="9" Count="0" />
      <LineId Id="22" Count="0" />
      <LineId Id="20" Count="0" />
      <LineId Id="23" Count="0" />
      <LineId Id="26" Count="0" />
      <LineId Id="30" Count="0" />
      <LineId Id="33" Count="1" />
      <LineId Id="37" Count="3" />
      <LineId Id="25" Count="0" />
      <LineId Id="41" Count="2" />
      <LineId Id="55" Count="0" />
      <LineId Id="49" Count="1" />
      <LineId Id="54" Count="0" />
      <LineId Id="97" Count="1" />
      <LineId Id="47" Count="0" />
      <LineId Id="56" Count="0" />
      <LineId Id="64" Count="1" />
      <LineId Id="92" Count="0" />
      <LineId Id="66" Count="0" />
      <LineId Id="71" Count="0" />
      <LineId Id="58" Count="1" />
      <LineId Id="70" Count="0" />
      <LineId Id="136" Count="0" />
      <LineId Id="145" Count="0" />
      <LineId Id="149" Count="3" />
      <LineId Id="146" Count="1" />
      <LineId Id="117" Count="1" />
      <LineId Id="143" Count="0" />
      <LineId Id="124" Count="1" />
      <LineId Id="127" Count="0" />
      <LineId Id="138" Count="3" />
      <LineId Id="24" Count="0" />
    </LineIds>
    <LineIds Name="RunCableHolder.FB_init">
      <LineId Id="14" Count="8" />
      <LineId Id="13" Count="0" />
      <LineId Id="24" Count="0" />
      <LineId Id="23" Count="0" />
      <LineId Id="33" Count="2" />
      <LineId Id="32" Count="0" />
      <LineId Id="61" Count="0" />
      <LineId Id="60" Count="0" />
      <LineId Id="62" Count="1" />
      <LineId Id="88" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>